--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>adal4j</artifactId>
 			<version>1.6.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.nimbusds</groupId>
